Add Vercel serverless function for marketing API

--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,23 @@
 {
-    "version": 2,
-    "builds": [
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist/public",
+    "framework": "vite",
+    "rewrites": [
         {
-            "src": "package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "dist"
-            }
+            "source": "/api/:path*",
+            "destination": "/api/:path*"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/$1"
-        },
-        {
-            "handle": "filesystem"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/index.html"
+    "functions": {
+        "api/**/*.ts": {
+            "runtime": "nodejs20.x"
         }
-    ]
+    },
+    "env": {
+        "GEMINI_API_KEY": "@gemini_api_key"
+    }
 }
