--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-    "buildCommand": "npm run build",
-    "outputDirectory": "dist/public",
     "framework": "vite",
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist",
     "rewrites": [
         {
             "source": "/api/:path*",
