--- a/vercel.json
+++ b/vercel.json
@@ -5,11 +5,23 @@
     "rewrites": [
         {
             "source": "/api/:path*",
-            "destination": "/api/:path*"
-        },
-        {
-            "source": "/(.*)",
-            "destination": "/index.html"
-        }
-    ]
-}
+            {
+                "framework": "vite",
+                "buildCommand": "npm run build",
+                "outputDirectory": "dist",
+                "rewrites": [
+                    {
+                        "source": "/api/:path*",
+                        "destination": "/api/:path*"
+                    },
+                    {
+                        "source": "/(.*)",
+                        "destination": "/index.html"
+                    }
+                ],
+                "functions": {
+                    "api/generate-marketing.ts": {
+                        "maxDuration": 60
+                    }
+                }
+            }
