--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "server": "tsx watch server/index.ts"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
+    "@google/genai": "^1.30.0",
     "@heroui/react": "^2.8.5",
     "@heroui/theme": "^2.4.23",
     "@radix-ui/react-accordion": "^1.2.12",
